@startuml classes-dominio
' Camada de dominio e persistencia -- codigo puro e deterministico.
' Renderizar:  plantuml -tsvg docs/uml/01-classes-dominio.puml
skinparam classAttributeIconSize 0
skinparam shadowing false
title Banco Distribuido -- Dominio e Persistencia

package "bank.domain  <<puro, sem I/O>>" {

  enum OpType {
    CREATE_ACCOUNT
    DEPOSIT
    WITHDRAW
    TRANSFER
    NOOP
  }

  class Operation <<frozen>> {
    + op_id : str
    + type : OpType
    + account_id : str
    + from_account : str
    + to_account : str
    + amount_cents : int
    --
    + touched_accounts() : tuple<str>
    + validate() : void
    + to_payload() : dict
  }
  note right of Operation
    **op_id** e a chave de idempotencia,
    gerada pelo cliente e mantida em
    todas as retentativas (RF-13).

    **touched_accounts()** devolve as contas
    **ordenadas** -- e o que impede deadlock
    entre transferencias cruzadas.
  end note

  class LogEntry <<frozen>> {
    + idx : int
    + epoch : int
    + operation : Operation
    + ts : float
    --
    + to_json() : dict
    + {static} from_json(dict) : LogEntry
  }
  note right of LogEntry
    Unidade de replicacao **e** de durabilidade.
    Uma transferencia e **uma** entrada: dai sai
    a atomicidade (RF-05) sem 2PC.
  end note

  class Account {
    + id : str
    + balance_cents : int
  }

  class OperationResult {
    + op_id : str
    + applied_idx : int
    + balances : Map<str,int>
  }

  class AccountStore {
    + accounts : Map<str,Account>
    + history : List<LogEntry>
    + applied : Map<str,OperationResult>
    + last_applied_idx : int
    --
    + get_balance(id) : int
    + total_cents() : int
    + statement(id, limit) : List<LogEntry>
    + check(Operation) : void
    + apply(LogEntry) : OperationResult
  }
  note bottom of AccountStore
    Unico ponto que muda saldos.
    Deterministico: a mesma sequencia de
    entradas produz o mesmo estado em
    qualquer no -- base da replicacao por
    log e da recuperacao por replay.
  end note

  class BankError <<exception>> {
    + code : str
    + http_status : int
  }
  class InsufficientFunds <<exception>>
  class UnknownAccount <<exception>>
  class NotPrimary <<exception>> {
    + primary_hint : str
  }
  class NoQuorum <<exception>>
  class ReadOnlyMode <<exception>>
}

package "bank.storage" {
  class WriteAheadLog {
    - path : Path
    - fsync_mode : str
    --
    + append(LogEntry) : void
    + append_buffered(List<LogEntry>) : int
    + wait_durable(target) : void
    + truncate_from(idx) : void
    + read_from(idx, limit) : List<LogEntry>
    + entry_at(idx) : LogEntry
    + last_idx : int
    + last_epoch : int
  }
  note right of WriteAheadLog
    ``append_buffered`` + ``wait_durable``
    separam a escrita do fsync, para que N
    escritas concorrentes dividam **um**
    fsync (group commit).
  end note

  class SnapshotMeta {
    + last_included_idx : int
    + last_included_epoch : int
    + total_cents : int
  }

  class RecoveredState {
    + store : AccountStore
    + wal : WriteAheadLog
    + last_idx : int
    + commit_index : int
  }
}

AccountStore "1" *-- "0..*" Account : contem
AccountStore "1" o-- "0..*" LogEntry : history
AccountStore "1" o-- "0..*" OperationResult : applied (dedupe)
LogEntry "1" *-- "1" Operation
Operation --> OpType
AccountStore ..> InsufficientFunds : <<levanta>>
AccountStore ..> UnknownAccount : <<levanta>>
BankError <|-- InsufficientFunds
BankError <|-- UnknownAccount
BankError <|-- NotPrimary
BankError <|-- NoQuorum
BankError <|-- ReadOnlyMode
WriteAheadLog "1" o-- "0..*" LogEntry : persiste
RecoveredState --> AccountStore
RecoveredState --> WriteAheadLog
SnapshotMeta ..> AccountStore : <<descreve>>

@enduml
